--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@ant-design/icons": "^5.3.0",
+    "@anthropic-ai/sdk": "^0.74.0",
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
@@ -46,6 +47,7 @@
     "fuzzyset.js": "1.0.7",
     "glob-to-regexp": "^0.4.1",
     "idb.filesystem.js": "^0.0.8",
+    "jimp": "^1.6.0",
     "jquery": "^3.7.1",
     "jszip": "^3.10.1",
     "kd-glob-to-regexp": "^0.4.2",
